# bildordbok

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
data/: se.danielnylander.Bildordbok.desktop
locale/sv/LC_MESSAGES/: bildordbok.mo
po/: bildordbok.pot  sv.po
po/locale/sv/LC_MESSAGES/: bildordbok.mo
src/bildordbok/: __init__.py  __main__.py  arasaac.py  export.py  main.py  tts.py  words.py
src/bildordbok.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bildordbok/locale/sv/LC_MESSAGES/: bildordbok.mo
